@@ -3,7 +3,9 @@ Changelog for the bépo "TypeMatrix style" layout for the Ergodox EZ keyboard
 v10 - ??
  - Add an "OS LEDS" layer (on FN + sysleds) to show the currently detected OS.
  - Add a keyboard reboot key on F11 in the OS LEDS layer.
-
+ - Update the "start" and "end" keys on a Mac layout to emit ctrl + arrow
+   instead of the actual keys, so that the behavior is coherent with other
+   systems.
 
 v9 - 2025-11-02
  - Add a shortcut to print ``` on FN+è (to help with markdown) as this otherwise
